Discs added and position updated

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Towers of Hanoi</h1>
     <form action="">
-        <input type="number">
+        <input type="number" placeholder="Enter number of discs" id="discNum">
         <button type="submit" onclick="display()">Submit</button>
     </form>
     <div class="container-tower">
-        <div class="towers"></div>
+        
+        <div class="towers">
+            <div class="discs"></div>
+            <div class="discs"></div>
+            <div class="discs"></div>
+            <div class="discs"></div>
+        </div>
         <div class="towers"></div>
         <div class="towers"></div>
     </div>
